[gd_scene load_steps=16 format=3 uid="uid://dhumfapob1uke"]

[ext_resource type="Script" path="res://Scripts/authentification.gd" id="1_nokbc"]
[ext_resource type="Shader" path="res://resources/Shaders/background.gdshader" id="2_k7504"]
[ext_resource type="Texture2D" uid="uid://dtu5qg0eq68qn" path="res://Images/Ui/GoogleButton/State=normal, Theme=light.svg" id="2_t0jm4"]
[ext_resource type="Shader" path="res://resources/Shaders/blur.gdshader" id="3_sfo2f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b0y64"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tn02b"]
shader = ExtResource("2_k7504")
shader_parameter/bottom_color = Color(0.199505, 0.268761, 0.32477, 1)
shader_parameter/top_color = Color(0.00420497, 0.0530708, 0.066118, 1)
shader_parameter/wave_amp = 0.5
shader_parameter/wave_size = 1.0
shader_parameter/wave_time_mul = 0.671
shader_parameter/total_phases = 8

[sub_resource type="Gradient" id="Gradient_i30uf"]
offsets = PackedFloat32Array(0, 0.993506)
colors = PackedColorArray(0.192157, 0.258824, 0.309804, 1, 0.0287565, 0.0508126, 0.0683862, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_h1gtf"]
gradient = SubResource("Gradient_i30uf")
width = 320
height = 568
fill_to = Vector2(0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5oci7"]
shader = ExtResource("3_sfo2f")
shader_parameter/lod = 3.933

[sub_resource type="GradientTexture2D" id="GradientTexture2D_cf6b7"]
gradient = SubResource("Gradient_i30uf")
width = 320
height = 568
fill_to = Vector2(0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ernp"]
size = Vector2(60, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_78amv"]
size = Vector2(70, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j0gh5"]
size = Vector2(180, 50)

[sub_resource type="Gradient" id="Gradient_rtbmu"]
offsets = PackedFloat32Array(0, 0.993506)
colors = PackedColorArray(0.192157, 0.258824, 0.309804, 1, 0.0287565, 0.0508126, 0.0683862, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_yp8jq"]
gradient = SubResource("Gradient_rtbmu")
width = 320
height = 568
fill_to = Vector2(0, 1)

[node name="Authentication" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nokbc")

[node name="BackGround" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxEmpty_b0y64")

[node name="Wave" type="TextureRect" parent="BackGround"]
material = SubResource("ShaderMaterial_tn02b")
layout_mode = 2
texture = SubResource("GradientTexture2D_h1gtf")

[node name="BlurEffect" type="TextureRect" parent="BackGround"]
material = SubResource("ShaderMaterial_5oci7")
layout_mode = 2
texture = SubResource("GradientTexture2D_cf6b7")

[node name="LoginScreen" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 48

[node name="center" type="VBoxContainer" parent="LoginScreen"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="LoginEmail" type="LineEdit" parent="LoginScreen/center"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Email"
alignment = 1

[node name="LoginPassword" type="LineEdit" parent="LoginScreen/center"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Password"
alignment = 1
secret = true

[node name="LoginShowPasswordButton" type="CheckButton" parent="LoginScreen/center"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Show Password"
alignment = 1

[node name="top" type="VBoxContainer" parent="LoginScreen"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label5" type="Label" parent="LoginScreen/top"]
layout_mode = 2
size_flags_horizontal = 4
text = "Login"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="LoginScreen/top"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Back"

[node name="bottom" type="VBoxContainer" parent="LoginScreen"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="LoginButton" type="Button" parent="LoginScreen/bottom"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Login"

[node name="LoginTouch" type="TouchScreenButton" parent="LoginScreen/bottom/LoginButton"]
unique_name_in_owner = true
position = Vector2(26, 16)
shape = SubResource("RectangleShape2D_0ernp")

[node name="LoginRememberMe" type="CheckButton" parent="LoginScreen/bottom"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Remember Me"
alignment = 1

[node name="SignupScreen" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 48

[node name="Center" type="VBoxContainer" parent="SignupScreen"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="SignupScreen/Center"]
layout_mode = 2
size_flags_vertical = 8

[node name="SignupEmail" type="LineEdit" parent="SignupScreen/Center/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Email"
alignment = 1

[node name="SignupPassword" type="LineEdit" parent="SignupScreen/Center/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Password"
alignment = 1
secret = true

[node name="SignupShowPasswordButton" type="CheckButton" parent="SignupScreen/Center/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Show Password"
alignment = 1

[node name="Bottom" type="VBoxContainer" parent="SignupScreen"]
layout_mode = 2
size_flags_vertical = 8

[node name="SignupButton" type="Button" parent="SignupScreen/Bottom"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Signup"

[node name="SignupTouch" type="TouchScreenButton" parent="SignupScreen/Bottom/SignupButton"]
unique_name_in_owner = true
position = Vector2(32, 17)
shape = SubResource("RectangleShape2D_78amv")

[node name="SignupRememberMe" type="CheckButton" parent="SignupScreen/Bottom"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Remember Me"
alignment = 1

[node name="Top" type="VBoxContainer" parent="SignupScreen"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label5" type="Label" parent="SignupScreen/Top"]
layout_mode = 2
size_flags_horizontal = 4
text = "SIGN UP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="SignupScreen/Top"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "Back"

[node name="MainScreen" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 48

[node name="GoogleButton" type="TextureButton" parent="MainScreen"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
texture_normal = ExtResource("2_t0jm4")

[node name="GoogleTouch" type="TouchScreenButton" parent="MainScreen/GoogleButton"]
unique_name_in_owner = true
position = Vector2(89, 23)
shape = SubResource("RectangleShape2D_j0gh5")

[node name="Status" type="Label" parent="MainScreen"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_vertical = 0
text = "not logged in ..."
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 3

[node name="Center" type="VBoxContainer" parent="MainScreen"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="SignUp" type="Button" parent="MainScreen/Center"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Sign Up"

[node name="Login" type="Button" parent="MainScreen/Center"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Login"

[node name="WelcomeScreen" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 48
theme_override_constants/margin_bottom = 48

[node name="Label" type="Label" parent="WelcomeScreen"]
layout_mode = 2
size_flags_horizontal = 4
text = "Welcome!"

[node name="LoadingLabel" type="Label" parent="WelcomeScreen"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Loading ..."

[node name="Fade" type="TextureRect" parent="WelcomeScreen"]
layout_mode = 2
texture = SubResource("GradientTexture2D_yp8jq")

[connection signal="toggled" from="LoginScreen/center/LoginShowPasswordButton" to="." method="_on_login_show_password_button_toggled"]
[connection signal="pressed" from="LoginScreen/top/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="LoginScreen/bottom/LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="LoginScreen/bottom/LoginButton/LoginTouch" to="." method="_on_login_button_pressed"]
[connection signal="toggled" from="LoginScreen/bottom/LoginRememberMe" to="." method="_on_login_remember_me_toggled"]
[connection signal="toggled" from="SignupScreen/Center/VBoxContainer2/SignupShowPasswordButton" to="." method="_on_signup_show_password_button_toggled"]
[connection signal="pressed" from="SignupScreen/Bottom/SignupButton" to="." method="_on_signup_button_pressed"]
[connection signal="pressed" from="SignupScreen/Bottom/SignupButton/SignupTouch" to="." method="_on_signup_button_pressed"]
[connection signal="toggled" from="SignupScreen/Bottom/SignupRememberMe" to="." method="_on_signup_remember_me_toggled"]
[connection signal="pressed" from="SignupScreen/Top/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MainScreen/GoogleButton" to="." method="_on_google_button_pressed"]
[connection signal="pressed" from="MainScreen/GoogleButton/GoogleTouch" to="." method="_on_google_button_pressed"]
[connection signal="pressed" from="MainScreen/Center/SignUp" to="." method="_on_sign_up_pressed"]
[connection signal="pressed" from="MainScreen/Center/Login" to="." method="_on_login_pressed"]
